@@ -63,6 +63,8 @@ roms
 
 * AI2 to fix (keyboard)
 
+* console mode (Win32)
+
 -------------
 + done
 - in progress
