@@ -13,6 +13,7 @@ To do:
 	- [roms]  $940: removed mutex at startup because we should be able to run 
 		2 instances of TiEmu for virtual linking.
 	- [roms]  $941: fixed ghost of RAM in $100000 on TI89,92,92+,V200.
+	- [roms]  $943: fixed ghost of RAM in $000000 on Tinanium
 
 - 25/02/2005, version 1.80o: roms
 	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
